--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: geoload-4-1-1-3
+DATE: 07/20/2008
+STAFF: dbm
+CHANGES: Make associations private
+
 TAG: geoload-4-1-1-2
 DATE: 07/10/2008
 STAFF: dbm
