--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: geoload-6-0-0-1
+DATE: 7/23/15
+STAFF: pf
+CHANGES: postgres conversion release tag
+
 TAG: geoload-tr11750-MP
 DATE: 06/29/2015
 STAFF: kstone
