--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: geoload-6-0-6-1
+DATE: 11/10/2016
+STAFF: lec 
+CHANGES:
+TR12455/added 'https' to GEOTOOL_URL
+
 TAG: geoload-6-0-4-1
 DATE: 04/28/2016
 STAFF: lec 
